--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mysql2": "^3.14.0",
     "node-fetch": "^3.3.2"
   }
 }
