--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^148.0.0",
     "mysql2": "^3.14.0",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "open": "^10.1.0"
   }
 }
